# wiki-scrape

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  template.env
data/: 1975_Pacific_hurricane_season.csv  darer.csv  dfad.csv  hurricanes.csv  test.csv
src/: main.py
src/models/: hurricane.py  hurricane_data.py  page_data.py
src/tasks/: scrape_hurricanes_to_csv.py
src/utils/: file_utils.py  llm_utils.py  text_utils.py  web_utils.py
tests/: hurricanes-wiki.html
tests/utils/: test_web_utils.py
