[tool.poetry]
name = "wiki-scrape"
version = "0.0.1"
description = "Wiki scrape"
authors = ["Georgios Lampropoulos <g.lampropoulos1987@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.3"
apache-airflow = "^2.10.1"
beautifulsoup4 = "^4.12.3"
langchain = "^0.3.0"
openai = "^1.46.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-dotenv = "^0.5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
